--- a/xmos/LEDParticleSimulation/.cproject
+++ b/xmos/LEDParticleSimulation/.cproject
@@ -99,7 +99,7 @@
 					<folderInfo id="com.xmos.cdt.toolchain.1258496715.1388822247" name="/" resourcePath="">
 						<toolChain id="com.xmos.cdt.toolchain.1057823067" name="com.xmos.cdt.toolchain" superClass="com.xmos.cdt.toolchain">
 							<targetPlatform archList="all" binaryParser="com.xmos.cdt.core.XEBinaryParser" id="com.xmos.cdt.core.platform.1410758630" isAbstract="false" osList="linux,win32,macosx" superClass="com.xmos.cdt.core.platform"/>
-							<builder arguments="CONFIG=Debug" id="com.xmos.cdt.builder.base.107469816" keepEnvironmentInBuildfile="false" managedBuildOn="false" superClass="com.xmos.cdt.builder.base">
+							<builder appendEnvironment="true" arguments="CONFIG=Debug" environment="XTA_ENABLED=true|" id="com.xmos.cdt.builder.base.107469816" keepEnvironmentInBuildfile="false" managedBuildOn="false" superClass="com.xmos.cdt.builder.base">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH" kind="outputPath" name="bin\Debug"/>
 								</outputEntries>
